--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Developer Portfolio</title>
-</head>
-<body>
-    <header>   </header>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <h3 class="nav-title">K<span class="text-primary">a</span>nij</h3>
+        <ul>
+          <li><a href="">Portfolio</a></li>
+          <li>Blog</li>
+          <li><button class="btn-primary">Hire me</button></li>
+        </ul>
+      </nav>
+    </header>
+
     <main></main>
+
     <footer></footer>
-    
-</body>
+  </body>
 </html>
