--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <h3 class="nav-title">K<span class="text-primary">a</span>nij</h3>
         <ul>
@@ -22,6 +22,19 @@
           <li><button class="btn-primary">Hire me</button></li>
         </ul>
       </nav>
+      <div class="banner">
+        <div class="banner-content">
+<h3 class="banner-greeting"> Hi,i am</h3>
+<h1 class="banner-title">Kanij Akter</h1>
+<p>Shot what able cold new see hold.Friendly as an betrayed formerly he. <br> Morning because as to society behaved moments.</p>
+<button class="btn-primary">Downlod CV</button>
+<button class="btn-primary"> contact</button>
+
+        </div>
+       <img class="profile-pic" src="styles/kanij2.png" alt="">
+
+
+      </div>
     </header>
 
     <main></main>
