--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="banner-content">
 <h3 class="banner-greeting"> Hi,i am</h3>
 <h1 class="banner-title">Kanij Akter</h1>
-<p>Shot what able cold new see hold.Friendly as an betrayed formerly he. <br> Morning because as to society behaved moments.</p>
+<p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly she.  Morning because as to society behaved moments.</p>
 <button class="btn-primary">Downlod CV</button>
 <button class="btn-primary"> contact</button>
 
@@ -37,7 +37,35 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+
+      <section class="about">
+        <h3 class="section-title">About me</h3>
+        <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        <div class="about-info-container">
+         <div class="about-info">
+          <h4 class="info-title">Name:
+            </h4>
+          <p class="info-description">Kanij Akter</p>
+         </div>
+         <div class="about-info">
+          <h4 class="info-title">Email:</h4>
+          <p class="info-description">mostkanijakter@gmail.com</p>
+         </div>
+         <div class="about-info">
+          <h4 class="info-title">Date of birth</h4>
+          <p class="info-description">2 December 2003</p>
+         </div>
+         <div class="about-info">
+          <h4 class="info-title">From:</h4>
+          <p class="info-description">Los Angeles,USA</p>
+         </div>
+
+        
+    
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
