--- a/index.html
+++ b/index.html
@@ -180,10 +180,14 @@
 
 
       <div class="footer-column">
-    <h3 class="section-title">Let's Message me</h3>
+    <h3 class="section-title">Let's Message me</h3> 
+   <from class="contact" action ="">
+    <input type="text" placeholder="Your name:">
+    <input type="email" name="" placeholder="Your Email id:" id="">
+    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+    <input class="btn-primary"  type="submit" value="submit">
+   </from>
 
-
-</p>
 
     </div>
 
